# rdkb-harvester

./: .gitreview  CONTRIBUTING.md  Makefile  configure.ac
config-atom/: GatewayAccessPointNeighborScanReport.avsc  Harvester.XML  InterfaceDevicesWifi.avsc  RadioInterfacesStatistics.avsc
include/: ccsp_harvesterLog_wrapper.h  harvester.h  harvester_avro.h
source/: Makefile.am
source/HarvesterCore/: Makefile  Makefile.am  harvester.c
source/HarvesterSsp/: Makefile  Makefile.am  cosa_harvester_dml.c  cosa_harvester_dml.h  cosa_harvester_internal.c  cosa_harvester_internal.h  harvester_associated_devices.c  harvester_associated_devices.h  harvester_associated_devices_avropack.c  harvester_neighboring_ap.c  harvester_neighboring_ap.h  harvester_neighboring_ap_avropack.c  harvester_neighboring_ap_ondemand.c  harvester_neighboring_ap_ondemand.h  harvester_radio_traffic.c  harvester_radio_traffic.h  harvester_radio_traffic_avropack.c  harvester_rbus_api.c  harvester_rbus_api.h  plugin_main.c  plugin_main.h  report_common.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h  webpa_interface.c  webpa_interface.h  webpa_interface_with_seshat.c  webpa_interface_without_seshat.c
source/test/: Makefile.am  gtest_main.cpp
